5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1671_1107.log
== TEST (2019-04-24 15:53:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia:(0/1/2/3/4/5/6) "))
if ((dia < 0) and (dia > 6)):
	print("A entrada ", x,"eh invalida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Dados invalidos")
TypeError: 'tuple' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:37:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia:(0/1/2/3/4/5/6) "))
diaf = int(input("dia futuro: (0/1/2/3/4/5/6) "))

if ((dia < 0) and (dia > 6)):
	print("A entrada ", x,"eh invalida")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Dados invalidos")
TypeError: 'tuple' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:35:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia:(0/1/2/3/4/5/6) "))
diaf = int(input("dia futuro: "))

if ((dia < 0) and (dia > 6)):
	print("A entrada ", x,"eh invalida")
elif (dia == 1):
   diaf = dia * diaf % dia
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Dados invalidos")
TypeError: 'tuple' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:36:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia:(0/1/2/3/4/5/6) "))
diaf = int(input("dia futuro: "))

if ((dia < 0) and (dia > 6)):
	print("A entrada ", x,"eh invalida")
elif (dia == 1):
   diaf = dia + diaf % dia
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Dados invalidos")
TypeError: 'tuple' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:50:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
dia = int(input("dia:(0/1/2/3/4/5/6) "))
diaf = int(input("dia futuro: "))
df = dia + diaf % dia
if ((dia < 0) and (dia > 6)):
	print("A entrada ", x,"eh invalida")
elif (dia == 0):
	msg = "domingo"
print("hoje eh" ,dia,"e o dia futuro eh" ,diaf)
   
-- OUTPUT:
hoje eh 9 e o dia futuro eh 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:48:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("qual o dia? "))
if((d>=0 and d<=0)):
	j = int(input("quantos dias? "))
   d1 = (d+j)%7
   if(d==0):
		d1 = "domingo"
	elif(d==2):
		d1 = "segunda"
	elif(d==3):
		d1 = "terca"
	elif(d==4):
		d1 = "quarta"
	elif(d==5):
		d1 = "quinta"
	elif(d==5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)	
else:
	print("A entrada",d,"eh invalida")
	
-- ERROR:
File "XXXX", line 7
    d1 = (d+j)%7
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:50:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("qual o dia? "))
if((d>=0 and d<=0)):
	j = int(input("Quantos dias? "))
	d1 = (d+j)%7
   if(d==0):
		d1 = "domingo"
	elif(d==2):
		d1 = "segunda"
	elif(d==3):
		d1 = "terca"
	elif(d==4):
		d1 = "quarta"
	elif(d==5):
		d1 = "quinta"
	elif(d==5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)	
else:
	print("A entrada",d,"eh invalida")
	
-- ERROR:
File "XXXX", line 8
    if(d==0):
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:50:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("qual o dia? "))
if((d>=0 and d<=0)):
	j = int(input("Quantos dias? "))
	d1 = (d+j)%7
   if (d==0):
		d1 = "domingo"
	elif(d==2):
		d1 = "segunda"
	elif(d==3):
		d1 = "terca"
	elif(d==4):
		d1 = "quarta"
	elif(d==5):
		d1 = "quinta"
	elif(d==5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)	
else:
	print("A entrada",d,"eh invalida")
	
-- ERROR:
File "XXXX", line 8
    if (d==0):
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:50:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("qual o dia? "))
if((d>=0 and d<=0)):
	j = int(input("Quantos dias? "))
	d1 = (d+j)%7
   if (d == 0):
		d1 = "domingo"
	elif(d==2):
		d1 = "segunda"
	elif(d==3):
		d1 = "terca"
	elif(d==4):
		d1 = "quarta"
	elif(d==5):
		d1 = "quinta"
	elif(d==5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)	
else:
	print("A entrada",d,"eh invalida")
	
-- ERROR:
File "XXXX", line 8
    if (d == 0):
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:51:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("qual o dia? "))
if((d>=0 and d<=6)):
	j = int(input("Quantos dias? "))
	d1 = (d+j)%7
    if(d == 0):
		d1 = "domingo"
	elif(d==2):
		d1 = "segunda"
	elif(d==3):
		d1 = "terca"
	elif(d==4):
		d1 = "quarta"
	elif(d==5):
		d1 = "quinta"
	elif(d==5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)	
else:
	print("A entrada",d,"eh invalida")
	
-- ERROR:
File "XXXX", line 8
    if(d == 0):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:51:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("qual o dia? "))
if((d>=0 and d<=6)):
	j = int(input("Quantos dias? "))
	d1 = (d+j)%7
    if(d==0):
		d1 = "domingo"
	elif(d==2):
		d1 = "segunda"
	elif(d==3):
		d1 = "terca"
	elif(d==4):
		d1 = "quarta"
	elif(d==5):
		d1 = "quinta"
	elif(d==5):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)	
else:
	print("A entrada",d,"eh invalida")
	
-- ERROR:
File "XXXX", line 8
    if(d==0):
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:56:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("qual o dia? "))
if((d>=0 and d<=6)):
	j = int(input("Quantos dias? "))
	d1 = (d+j)%7
    if(d==0):
		d = "domingo"
	elif(d==2):
		d = "segunda"
	elif(d==3):
		d = "terca"
	elif(d==4):
		d = "quarta"
	elif(d==5):
		d = "quinta"
	elif(d==5):
		d = "sexta"
	else:
		d = "sabado"
	if(d1 = 0):
	   d1 = "segunda"
	elif(d1 = 1):
		d1 = "terca"
	elif(d1 = 2):
		d1 = "quarta"
	elif(d1 = 3):
		d1 = "quinta"
	elif(d1 = 4):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)	
else:
	print("A entrada",d,"eh invalida")
	
-- ERROR:
File "XXXX", line 8
    if(d==0):
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:57:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("qual o dia? "))
if((d>=0 and d<=6)):
	j = int(input("Quantos dias? "))
	d1 = (d+j)%7
   if(d==0):
		d = "domingo"
	elif(d==2):
		d = "segunda"
	elif(d==3):
		d = "terca"
	elif(d==4):
		d = "quarta"
	elif(d==5):
		d = "quinta"
	elif(d==5):
		d = "sexta"
	else:
		d = "sabado"
	if(d1 = 0):
	   d1 = "segunda"
	elif(d1 = 1):
		d1 = "terca"
	elif(d1 = 2):
		d1 = "quarta"
	elif(d1 = 3):
		d1 = "quinta"
	elif(d1 = 4):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)	
else:
	print("A entrada",d,"eh invalida")
	
-- ERROR:
File "XXXX", line 8
    if(d==0):
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:57:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("qual o dia? "))
if((d>=0 and d<=6)):
	j = int(input("Quantos dias? "))
	d1 = (d+j)%7
if(d==0):
		d = "domingo"
	elif(d==2):
		d = "segunda"
	elif(d==3):
		d = "terca"
	elif(d==4):
		d = "quarta"
	elif(d==5):
		d = "quinta"
	elif(d==5):
		d = "sexta"
	else:
		d = "sabado"
	if(d1 = 0):
	   d1 = "segunda"
	elif(d1 = 1):
		d1 = "terca"
	elif(d1 = 2):
		d1 = "quarta"
	elif(d1 = 3):
		d1 = "quinta"
	elif(d1 = 4):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)	
else:
	print("A entrada",d,"eh invalida")
	
-- ERROR:
File "XXXX", line 10
    elif(d==2):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:57:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("qual o dia? "))
if((d>=0 and d<=6)):
	j = int(input("Quantos dias? "))
	d1 = (d+j)%7
if(d==0):
		d = "domingo"
elif(d==2):
		d = "segunda"
	elif(d==3):
		d = "terca"
	elif(d==4):
		d = "quarta"
	elif(d==5):
		d = "quinta"
	elif(d==5):
		d = "sexta"
	else:
		d = "sabado"
	if(d1 = 0):
	   d1 = "segunda"
	elif(d1 = 1):
		d1 = "terca"
	elif(d1 = 2):
		d1 = "quarta"
	elif(d1 = 3):
		d1 = "quinta"
	elif(d1 = 4):
		d1 = "sexta"
	else:
		d1 = "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)	
else:
	print("A entrada",d,"eh invalida")
	
-- ERROR:
File "XXXX", line 12
    elif(d==3):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:57:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("qual o dia? "))
if((d>=0 and d<=6)):
	j = int(input("Quantos dias? "))
	d1 = (d+j)%7
if(d==0):
		d = "domingo"
elif(d==2):
		d = "segunda"
elif(d==3):
		d = "terca"
elif(d==4):
		d = "quarta"
elif(d==5):
		d = "quinta"
elif(d==5):
		d = "sexta"
else:
		d = "sabado"
if(d1 = 0):
	   d1 = "segunda"
elif(d1 = 1):
		d1 = "terca"
elif(d1 = 2):
		d1 = "quarta"
elif(d1 = 3):
		d1 = "quinta"
elif(d1 = 4):
		d1 = "sexta"
else:
		d1 = "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)	
else:
	print("A entrada",d,"eh invalida")
	
-- ERROR:
File "XXXX", line 22
    if(d1 = 0):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:58:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("qual o dia? "))
if((d>=0 and d<=6)):
	j = int(input("Quantos dias? "))
	d1 = (d+j)%7
if(d==0):
		d = "domingo"
elif(d==2):
		d = "segunda"
elif(d==3):
		d = "terca"
elif(d==4):
		d = "quarta"
elif(d==5):
		d = "quinta"
elif(d==5):
		d = "sexta"
else:
		d = "sabado"
   if(d1 = 0):
	   d1 = "segunda"
elif(d1 = 1):
		d1 = "terca"
elif(d1 = 2):
		d1 = "quarta"
elif(d1 = 3):
		d1 = "quinta"
elif(d1 = 4):
		d1 = "sexta"
else:
		d1 = "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)	
else:
	print("A entrada",d,"eh invalida")
	
-- ERROR:
File "XXXX", line 22
    if(d1 = 0):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:55:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("qual o dia? "))
if((d>=0 and d<=6)):
	j = int(input("Quantos dias? "))
	d1 = (d+j)%7
if(d==0):
		d = "domingo"
elif(d==2):
		d = "segunda"
elif(d==3):
		d = "terca"
elif(d==4):
		d = "quarta"
elif(d==5):
		d = "quinta"
elif(d==5):
		d = "sexta"
else:
		d = "sabado"
   if(d1 = 0):
	   d1 = "segunda"
elif(d1 = 1):
		d1 = "terca"
elif(d1 = 2):
		d1 = "quarta"
elif(d1 = 3):
		d1 = "quinta"
elif(d1 = 4):
		d1 = "sexta"
else:
		d1 = "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)	
else:
	print("A entrada",d,"eh invalida")
	
-- ERROR:
File "XXXX", line 22
    if(d1 = 0):
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:06:41) 
-- CODE:
d = int(input("qual o dia? "))
if ((d >= 0 and d <= 6)):
	j = int(input("quantos dias: "))
	d1 = (d+j)%7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domingo"
	elif (d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
	   d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
		d1 = "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:07:08) 
-- CODE:
d = int(input("qual o dia? "))
if ((d >= 0 and d <= 6)):
	j = int(input("quantos dias: "))
	d1 = (d+j)%7
	if (d == 0):
		d = "domingo"
	elif (d == 1):
		d = "segunda"
	elif (d == 2):
		d = "terca"
	elif (d == 3):
		d = "quarta"
	elif (d == 4):
		d = "quinta"
	elif (d == 5):
		d = "sexta"
	else:
		d = "sabado"
	if (d1 == 0):
		d1 = "domingo"
	elif (d1 == 1):
		d1 = "segunda"
	elif (d1 == 2):
	   d1 = "terca"
	elif (d1 == 3):
		d1 = "quarta"
	elif (d1 == 4):
		d1 = "quinta"
	elif (d1 == 5):
		d1 = "sexta"
		d1 = "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
-- EXECUTION TIME:
0.16089
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
